# RemoteFileService

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_WORKFLOW_GATEWAY.md  alembic.ini  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: admin.py  dependencies.py  health.py  ingestion.py  papers.py  retrieval.py  workflow_jobs.py
app/cli/: bootstrap.py  wait_for_db.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_workflow_jobs.py
app/models/: __init__.py  base.py  duplicate_candidate.py  graph_sync_record.py  ingestion_job.py  kb_document.py  paper.py  paper_version.py  workflow_job.py
app/providers/: base.py  dify_knowledge.py  dify_workflow.py  disabled.py  neo4j_graph.py  object_storage.py
app/repositories/: jobs.py  kb_documents.py  papers.py
app/schemas/: graph.py  ingestion.py  job.py  knowledge.py  paper.py  workflow_jobs.py
app/services/: deduplication_service.py  ingestion_service.py  job_service.py  paper_service.py  workflow_gateway_service.py
app/workers/: celery_app.py  tasks.py  workflow_tasks.py
report/: Test.md  Test2.0.md
tests/: conftest.py  test_dify_workflow_provider.py  test_ingestion_api.py  test_providers.py  test_workflow_jobs_api.py  test_workflow_task_recovery.py
